git commit -  coding router resetPwd, screen dialogbox, screen ressetConfirmEmailSucess

--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -3,5 +3,8 @@
     content: url("../assets/img/background-login.svg");
     background-repeat: no-repeat;
     width: 100vw;
+    position: absolute;
+    bottom: 0;
+    left: 0;
     // background-color: ;
 }
