--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -13,10 +13,19 @@
   text-align: center;
 }
 
-.css-1s2u09g-control, .css-b62m3t-container {
+.css-1s2u09g-control,
+.css-b62m3t-container {
   width: 300px;
 }
 
-.css-10mzr36-MuiGrid-root>.MuiGrid-item  {
-  padding: 0px !important
+.css-10mzr36-MuiGrid-root > .MuiGrid-item {
+  padding: 0px !important;
+}
+
+.display-none {
+  display: none;
+}
+
+.w-0 {
+  width: 0;
 }
