--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #f6f6f6 !important;
+  /* background-color: #f6f6f6 !important; */
 }
 
 code {
