--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -27,7 +27,8 @@ html {
 }
 *::-webkit-scrollbar-thumb {
   /* background: #96dfce; */
-  background: #dcdcdc;
+  /* background: #dcdcdc; */
+  background: #b3d48f;
   cursor: pointer;
   border-radius: 10px;
 }
