--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -8,11 +8,11 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  scroll-behavior: smooth;
+  /* scroll-behavior: smooth; */
 }
-html {
+/* html {
   scroll-behavior: smooth;
-}
+} */
 *::-webkit-scrollbar {
   opacity: 0;
   width: 8px;
@@ -20,6 +20,7 @@ html {
 }
 ::-webkit-scrollbar:hover {
   opacity: 1;
+   cursor: pointer;
 }
 *::-webkit-scrollbar-track {
   background: #f5f5f5;
@@ -31,9 +32,11 @@ html {
   background: #b3d48f;
   cursor: pointer;
   border-radius: 10px;
+   cursor: pointer;
 }
 *::-webkit-scrollbar-thumb:hover {
-   background: #96dfce;
+   /* background: #96dfce; */
+    cursor: pointer;
 }
 .App {
   text-align: center;
