--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -8,7 +8,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  overflow: hidden;
+  /* overflow: hidden; */
   /* overflow: auto; */
   /* scroll-behavior: smooth; */
 }
