--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -8,6 +8,8 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  background-repeat: no-repeat;
+  background-size: cover;
   /* overflow: hidden; */
   /* overflow: auto; */
   /* scroll-behavior: smooth; */
