--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -78,3 +78,10 @@
 .emoji-mart-bar:last-child {
   height: 10px;
 }
+.MuiInput-underline::before {
+  content: "" !important;
+  display: none;
+}
+#des-txtarea-desc .MuiDialog-paper {
+  width: 100%;
+}
