--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -32,7 +32,8 @@
 }
 *::-webkit-scrollbar-thumb {
   /* background: #96dfce; */
-  background: #dcdcdc;
+  /* background: #dcdcdc; */
+  background: #e5e5e5;
   /* background: #b3d48f; */
   cursor: pointer;
   border-radius: 10px;
